--- a/apps/web/food-delivery-ui/package.json
+++ b/apps/web/food-delivery-ui/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.0.0",
     "@mantine/core": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
     "@tabler/icons-react": "^3.30.0",
@@ -20,7 +21,9 @@
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
