--- a/apps/web/food-delivery-ui/package.json
+++ b/apps/web/food-delivery-ui/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "next": "^15.1.6",
+    "react-icons": "^4.8.0",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
