--- a/apps/web/food-delivery-ui/package.json
+++ b/apps/web/food-delivery-ui/package.json
@@ -11,19 +11,22 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
     "@hookform/resolvers": "^4.0.0",
     "@mantine/core": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
     "@tabler/icons-react": "^3.30.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "graphql": "^16.10.0",
     "next": "^15.1.6",
-    "react-icons": "^4.8.0",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^4.8.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
