--- a/apps/web/food-delivery-ui/package.json
+++ b/apps/web/food-delivery-ui/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "graphql": "^16.10.0",
+    "js-cookie": "^3.0.5",
     "next": "^15.1.6",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
@@ -30,6 +31,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
