--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "prettier": "^3.4.2",
     "turbo": "^2.3.4",
     "typescript": "5.7.3"
@@ -22,6 +23,7 @@
   ],
   "dependencies": {
     "@mantine/core": "^7.16.3",
-    "@mantine/hooks": "^7.16.3"
+    "@mantine/hooks": "^7.16.3",
+    "js-cookie": "^3.0.5"
   }
 }
