--- a/apps/web/food-delivery-ui/package.json
+++ b/apps/web/food-delivery-ui/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.10.0",
     "js-cookie": "^3.0.5",
     "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
